# tasecureapi

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  PROCESS.md  README.md  RELEASE.md  UsageModel.md
reference/: CMakeLists.txt  CMakeLists.txt.in  README.md  root_keystore.p12
reference/cmake/: ClangFormat.cmake  README.md  SAVED_CUSTOM_FILES.md  patch_mbedtls.cmake
reference/cmake/custom_headers/: curve25519-donna.h  curve25519-randombytes-custom.h  curve25519_CMakeLists.txt  ed25519-hash-custom.h  ed25519-randombytes-custom.h  edwards_CMakeLists.txt
reference/cmake/patches/: README_PATCHES.md  build_fixes_summary.txt  ed25519-hash-custom.h.patch
reference/cmake/patches_mbedtls/: enable_ecp_fixed_point.patch  gcm_multipart_mbedtls3x_backport.patch  mbedtls_rsa_pss_hang_fix.patch
reference/include/: README  threads.h
reference/src/: .clang-format  .clang-tidy  CMakeLists.txt
reference/src/client/: 0351000003510001.key  0371000003710002.key  0371000003710003.key  0391000003910001.key  CMakeLists.txt  apple_fairplay_secret.key  apple_mfi_base_key.key  netflix_hmac_key.key  netflix_wrapping_key.key
reference/src/client/docs/: Doxyfile.in
reference/src/client/include/: sa.h  sa_cenc.h  sa_crypto.h  sa_engine.h  sa_key.h  sa_provider.h  sa_svp.h  sa_ta_types.h  sa_types.h
reference/src/client/src/: sa_common.c  sa_common.h  sa_engine.c  sa_engine_cipher.c  sa_engine_digest.c  sa_engine_internal.h  sa_engine_pkey.c  sa_engine_pkey_asn1_method.c  sa_engine_pkey_data.c  sa_log.c  sa_log.h  sa_provider.c  sa_provider_asym_cipher.c  sa_provider_cipher.c  sa_provider_digest.c  sa_provider_internal.h  sa_provider_kdf.c  sa_provider_keyexch.c  sa_provider_keymgt.c  sa_provider_mac.c  sa_provider_signature.c  sa_public_key.c  sa_public_key.h
reference/src/client/test/: client_test_helpers.cpp  client_test_helpers.h  environment.cpp  sa_client_thread_test.cpp  sa_crypto_cipher_common.cpp  sa_crypto_cipher_common.h  sa_crypto_cipher_init.cpp  sa_crypto_cipher_init_aes_cbc.cpp  sa_crypto_cipher_init_aes_cbc_pkcs7.cpp  sa_crypto_cipher_init_aes_ctr.cpp  sa_crypto_cipher_init_aes_ecb.cpp  sa_crypto_cipher_init_aes_ecb_pkcs7.cpp  sa_crypto_cipher_init_aes_gcm.cpp  sa_crypto_cipher_init_chacha20.cpp  sa_crypto_cipher_init_chacha20_poly1305.cpp  sa_crypto_cipher_init_ec_elgamal.cpp  sa_crypto_cipher_init_rsa_oaep.cpp  sa_crypto_cipher_init_rsa_pkcs1v15.cpp  sa_crypto_cipher_multiple_thread.cpp  sa_crypto_cipher_process.cpp  sa_crypto_cipher_process_aes_cbc.cpp  sa_crypto_cipher_process_aes_cbc_pkcs7.cpp  sa_crypto_cipher_process_aes_ctr.cpp  sa_crypto_cipher_process_aes_ecb.cpp  sa_crypto_cipher_process_aes_ecb_pkcs7.cpp  sa_crypto_cipher_process_aes_gcm.cpp  sa_crypto_cipher_process_chacha20.cpp  sa_crypto_cipher_process_chacha20_poly1305.cpp  sa_crypto_cipher_process_ec_elgamal.cpp  sa_crypto_cipher_process_last.cpp  sa_crypto_cipher_process_last_aes_cbc.cpp  sa_crypto_cipher_process_last_aes_cbc_pkcs7.cpp  sa_crypto_cipher_process_last_aes_ctr.cpp  sa_crypto_cipher_process_last_aes_ecb.cpp  sa_crypto_cipher_process_last_aes_ecb_pkcs7.cpp  sa_crypto_cipher_process_last_aes_gcm.cpp  sa_crypto_cipher_process_last_chacha20_poly1305.cpp  sa_crypto_cipher_process_last_ec_elgamal.cpp  sa_crypto_cipher_process_last_rsa_oaep.cpp  sa_crypto_cipher_process_last_rsa_pkcs1v15.cpp  (+126 more)
reference/src/clientimpl/: CMakeLists.txt
reference/src/clientimpl/src/: sa_crypto_cipher_init.c  sa_crypto_cipher_process.c  sa_crypto_cipher_process_last.c  sa_crypto_cipher_release.c  sa_crypto_cipher_update_iv.c  sa_crypto_mac_compute.c  sa_crypto_mac_init.c  sa_crypto_mac_process.c  sa_crypto_mac_process_key.c  sa_crypto_mac_release.c  sa_crypto_random.c  sa_crypto_sign.c  sa_get_device_id.c  sa_get_name.c  sa_get_ta_uuid.c  sa_get_version.c  sa_key_derive.c  sa_key_digest.c  sa_key_exchange.c  sa_key_export.c  sa_key_generate.c  sa_key_get_public.c  sa_key_header.c  sa_key_import.c  sa_key_provision.c  sa_key_release.c  sa_key_unwrap.c  sa_process_common_encryption.c  sa_svp_buffer_alloc.c  sa_svp_buffer_check.c  sa_svp_buffer_copy.c  sa_svp_buffer_copy_blocks.c  sa_svp_buffer_create.c  sa_svp_buffer_free.c  sa_svp_buffer_release.c  sa_svp_buffer_write.c  sa_svp_check.c  sa_svp_copy.c  sa_svp_key_check.c  sa_svp_supported.c  (+1 more)
reference/src/taimpl/: CMakeLists.txt  patch_mbedtls.cmake
reference/src/taimpl/cmake/: FindYAJL.cmake
reference/src/taimpl/include/: ta.h  ta_sa.h  ta_sa_cenc.h  ta_sa_crypto.h  ta_sa_key.h  ta_sa_svp.h  ta_sa_types.h
reference/src/taimpl/src/: ta_sa_close.c  ta_sa_crypto_cipher_init.c  ta_sa_crypto_cipher_process.c  ta_sa_crypto_cipher_process_last.c  ta_sa_crypto_cipher_release.c  ta_sa_crypto_cipher_update_iv.c  ta_sa_crypto_mac_compute.c  ta_sa_crypto_mac_init.c  ta_sa_crypto_mac_process.c  ta_sa_crypto_mac_process_key.c  ta_sa_crypto_mac_release.c  ta_sa_crypto_random.c  ta_sa_crypto_sign.c  ta_sa_get_device_id.c  ta_sa_get_name.c  ta_sa_get_ta_uuid.c  ta_sa_get_version.c  ta_sa_init.c  ta_sa_key_derive.c  ta_sa_key_digest.c  ta_sa_key_exchange.c  ta_sa_key_export.c  ta_sa_key_generate.c  ta_sa_key_get_public.c  ta_sa_key_header.c  ta_sa_key_import.c  ta_sa_key_provision.c  ta_sa_key_release.c  ta_sa_key_unwrap.c  ta_sa_process_common_encryption.c  ta_sa_svp_buffer_check.c  ta_sa_svp_buffer_copy.c  ta_sa_svp_buffer_copy_blocks.c  ta_sa_svp_buffer_create.c  ta_sa_svp_buffer_release.c  ta_sa_svp_buffer_write.c  ta_sa_svp_check.c  ta_sa_svp_copy.c  ta_sa_svp_key_check.c  ta_sa_svp_supported.c  (+1 more)
reference/src/taimpl/test/: environment.cpp  json.cpp  object_store.cpp  rights.cpp  slots.cpp  ta_sa_init.cpp  ta_sa_svp_buffer_check.cpp  ta_sa_svp_buffer_copy.cpp  ta_sa_svp_buffer_write.cpp  ta_sa_svp_check.cpp  ta_sa_svp_common.cpp  ta_sa_svp_common.h  ta_sa_svp_copy.cpp  ta_sa_svp_crypto.cpp  (+7 more)
reference/src/util/: CMakeLists.txt
reference/src/util_mbedtls/: CMakeLists.txt
reference/src/util_openssl/: CMakeLists.txt
reference/test/: SecApiKeyProvisionTaTests.md  fake_netflix_encryption_key.key  fake_playready_private_key.key  root_keystore.p12  widevine_oem_private.key
(+181 files in other folders)
